# zxingify-objc

ZXingObjC/: CMakeLists.txt  ZXingObjC.h.in
ZXingObjC/aztec/: CMakeLists.txt
ZXingObjC/aztec/decoder/: CMakeLists.txt
ZXingObjC/aztec/detector/: CMakeLists.txt
ZXingObjC/aztec/encoder/: CMakeLists.txt
ZXingObjC/client/: CMakeLists.txt
ZXingObjC/client/result/: CMakeLists.txt
ZXingObjC/common/: CMakeLists.txt
ZXingObjC/common/detector/: CMakeLists.txt
ZXingObjC/common/reedsolomon/: CMakeLists.txt
ZXingObjC/core/: CMakeLists.txt  ZXInvertedLuminanceSource.m
ZXingObjC/datamatrix/: CMakeLists.txt
ZXingObjC/datamatrix/decoder/: CMakeLists.txt
ZXingObjC/datamatrix/detector/: CMakeLists.txt
ZXingObjC/datamatrix/encoder/: CMakeLists.txt
ZXingObjC/maxicode/: CMakeLists.txt
ZXingObjC/maxicode/decoder/: CMakeLists.txt
ZXingObjC/multi/: CMakeLists.txt
ZXingObjC/oned/: CMakeLists.txt
ZXingObjC/oned/rss/: CMakeLists.txt
ZXingObjC/oned/rss/expanded/: CMakeLists.txt
ZXingObjC/oned/rss/expanded/decoders/: CMakeLists.txt
ZXingObjC/pdf417/: CMakeLists.txt
ZXingObjC/pdf417/decoder/: CMakeLists.txt
ZXingObjC/pdf417/decoder/ec/: CMakeLists.txt
ZXingObjC/pdf417/detector/: CMakeLists.txt
ZXingObjC/pdf417/encoder/: CMakeLists.txt
ZXingObjC/qrcode/: CMakeLists.txt
ZXingObjC/qrcode/decoder/: CMakeLists.txt
ZXingObjC/qrcode/detector/: CMakeLists.txt
ZXingObjC/qrcode/encoder/: CMakeLists.txt
ZXingObjC/qrcode/multi/: CMakeLists.txt
ZXingObjC/qrcode/multi/detector/: CMakeLists.txt
